--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-PORT = 3001
-MONGO_URL = "mongodb+srv://pangarkarkrishna61:databasetravel12@travel.uvvov.mongodb.net/?retryWrites=true&w=majority&appName=travel"
-JWT_KEY = "ThisIsMyTravelSolo"
+PORT =
+MONGO_URL = 
+
+JWT_KEY = 
